# UAVT-s-localization

./: .gitignore  Acquisition.cpp  CMakeLists.txt  Fisheye.cpp  Fisheye.h  Localization.cpp  MindVision.hpp  README.md  RTSP.hpp  SUF401GM.hpp  Undistort.hpp  fisheye.cpp  main.cpp
Inc/Algorithms/: PoseDetector.hpp  Undistort.hpp
Inc/Cameras/: FPS.hpp  RTSP.hpp  SUF401GM.hpp  Video.hpp
Src/Acquisition/: Acquisition.cpp
Src/Callibration/: Fisheye.cpp  Fisheye.h
Src/Localization/: Localization.cpp  Localization.h
